--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,9 @@
   font-family:"Outfit", sans-serif;
 }
 
-@theme{
-  --color-primary: #4fbf8b;
-  --color--primary--dull:#44ae7c
+@theme {
+  --color-primary: #94dc1c; /* Updated to vibrant green */
+  --color-primary-dull: #86c019; /* Muted variant for secondary use */
 }
+
+
